Added a calender for October that you can input data or words into. Has the 7 days of the week and date in a table that looks like a calender. Also centured everything and implemented in planner.html.

--- a/templates/planner.html
+++ b/templates/planner.html
@@ -53,6 +53,115 @@
     <!-- button that leads to the repo, can style the button in css above -->
     <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Schedule and Calender (currently leads to github repo)</a>
 
+    <table border="1">
+
+        <tr align= "center">
+            <th colspan="7">October 2021</th>
+        </tr>
+
+        <tr align= "center">
+            <th >Sun</th>
+            <th>Mon</th>
+            <th>Tue</th>
+            <th>Wed</th>
+            <th>Thu</th>
+            <th>Fri</th>
+            <th>Sat</th>
+        </tr>
+
+        <tr>
+            <td> <label> &nbsp </label>
+                <input> </td>
+            </td>
+            <td> <label> &nbsp </label>
+                <input> </td>
+            <td> <label> &nbsp </label>
+                <input> </td>
+            <td> <label> &nbsp </label>
+                <input> </td>
+            <td> <label> &nbsp </label>
+                <input> </td>
+            <td><label for="plan_01">  1 </label>
+                <input name="plan_01" id="plan_01" type="text" placeholder="plan"> </td>
+            <td><label for="plan_2"> 2 </label>
+                <input name="plan_2" id="plan_2" type="text" placeholder="plan"> </td>
+        </tr>
+
+
+        <tr>
+            <td><label for="plan_3"> 3 </label>
+                <input name="plan_3" id="plan_3" type="text" placeholder="plan"> </td>
+            <td><label for="plan_4"> 4 </label>
+                <input name="plan_4" id="plan_4" type="text" placeholder="plan"> </td>
+            <td><label for="plan_5"> 5 </label>
+                <input name="plan_5" id="plan_5" type="text" placeholder="plan"> </td>
+            <td><label for="plan_6"> 6 </label>
+                <input name="plan_6" id="plan_6" type="text" placeholder="plan"> </td>
+            <td><label for="plan_7"> 7 </label>
+                <input name="plan_7" id="plan_7" type="text" placeholder="plan"> </td>
+            <td><label for="plan_8"> 8 </label>
+                <input name="plan_8" id="plan_8" type="text" placeholder="plan"> </td>
+            <td><label for="plan_9"> 9 </label>
+                <input name="plan_9" id="plan_9" type="text" placeholder="plan"> </td>
+        </tr>
+
+        <tr>
+            <td><label for="plan_10"> 10 </label>
+                <input name="plan_10" id="plan_10" type="text" placeholder="plan"> </td>
+            <td><label for="plan_11"> 11 </label>
+                <input name="plan_11" id="plan_11" type="text" placeholder="plan"> </td>
+            <td><label for="plan_12"> 12 </label>
+                <input name="plan_12" id="plan_12" type="text" placeholder="plan"> </td>
+            <td><label for="plan_13"> 13 </label>
+                <input name="plan_13" id="plan_13" type="text" placeholder="plan"> </td>
+            <td><label for="plan_14"> 14 </label>
+                <input name="plan_14" id="plan_14" type="text" placeholder="plan"> </td>
+            <td><label for="plan_15"> 15 </label>
+                <input name="plan_15" id="plan_15" type="text" placeholder="plan"> </td>
+            <td><label for="plan_16"> 16 </label>
+                <input name="plan_16" id="plan_16" type="text" placeholder="plan"> </td>
+        </tr>
+
+        <tr>
+            <td><label for="plan_17"> 17 </label>
+                <input name="plan_17" id="plan_17" type="text" placeholder="plan"> </td>
+            <td><label for="plan_18"> 18 </label>
+                <input name="plan_18" id="plan_18" type="text" placeholder="plan"> </td>
+            <td><label for="plan_19"> 19 </label>
+                <input name="plan_19" id="plan_19" type="text" placeholder="plan"> </td>
+            <td><label for="plan_20"> 20 </label>
+                <input name="plan_20" id="plan_20" type="text" placeholder="plan"> </td>
+            <td><label for="plan_21"> 21 </label>
+                <input name="plan_21" id="plan_21" type="text" placeholder="plan"> </td>
+            <td><label for="plan_22"> 22 </label>
+                <input name="plan_22" id="plan_22" type="text" placeholder="plan"> </td>
+            <td><label for="plan_23"> 23 </label>
+                <input name="plan_23" id="plan_23" type="text" placeholder="plan"> </td>
+        </tr>
+
+        <tr>
+            <td><label for="plan_24"> 24 </label>
+                <input name="plan_24" id="plan_24" type="text" placeholder="plan"> </td>
+            <td><label for="plan_25"> 25 </label>
+                <input name="plan_25" id="plan_25" type="text" placeholder="plan"> </td>>
+            <td><label for="plan_26"> 26 </label>
+                <input name="plan_26" id="plan_26" type="text" placeholder="plan"> </td>
+            <td><label for="plan_27"> 27 </label>
+                <input name="plan_27" id="plan_27" type="text" placeholder="plan"> </td>>
+            <td><label for="plan_28"> 28 </label>
+                <input name="plan_28" id="plan_28" type="text" placeholder="plan"> </td>
+            <td><label for="plan_29"> 29 </label>
+                <input name="plan_29" id="plan_29" type="text" placeholder="plan"> </td>
+            <td><label for="plan_30"> 30 </label>
+                <input name="plan_30" id="plan_30" type="text" placeholder="plan"> </td>
+        </tr>
+
+        <tr>
+            <td><label for="plan_31"> 31 </label>
+                <input name="plan_31" id="plan_31" type="text" placeholder="plan"> </td>
+        </tr>
+
+    </table>
 
     <!-- TABLE TIME -->
 <!--    <div class="container">-->
