--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -13,7 +13,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                <!-- commenting out these lines for the moment-->
                 <!-- stub is shown using the name of the route -->
                 <!--<a class="nav-link" href={>{ url_for('index') }}>Portfolio -->
-                <a class="nav-link" href={{ url_for('planner') }}>Planner</a>
+                <a class="nav-link" href={{ url_for('planner3') }}>Planner</a>
                 <!-- <a class="nav-link" href={{ url_for('README') }}>README</a> -->
                 <a class="nav-link" href={{ url_for('nasty') }}>Nasty</a>
             <li>
