--- a/templates/planner3.html
+++ b/templates/planner3.html
@@ -617,6 +617,6 @@
 
     </script>
     <a href="http://127.0.0.1:5000/weatherapi/">
-        Click Me
+        Click Here to Check the Weather!
     </a>
 </div>
