added iteration and 'for' loop for lazy programming

--- a/templates/planner3.html
+++ b/templates/planner3.html
@@ -616,7 +616,8 @@
 
 
     </script>
-    <a href="http://127.0.0.1:5000/weatherapi/">
-        Click Here to Check the Weather!
-    </a>
+<!--    <a href="http://127.0.0.1:5000/weatherapi/">-->
+<!--        Click Here to Check the Weather!-->
+<!--    </a>-->
+    <a class="btn btn-primary" href="http://127.0.0.1:5000/binarytoplanner/">Want to take a quick break from studying? Click here!</a>
 </div>
