--- a/templates/planner3.html
+++ b/templates/planner3.html
@@ -619,5 +619,5 @@
 <!--    <a href="http://127.0.0.1:5000/weatherapi/">-->
 <!--        Click Here to Check the Weather!-->
 <!--    </a>-->
-    <a class="btn btn-primary" href="http://127.0.0.1:5000/binarytoplanner/">Want to take a quick break from studying? Click here!</a>
+    <a class="btn btn-primary" href="http://127.0.0.1:5000/binarytoplanner/">Want to take a quick break from studying and talk to your friends in binary? Click here!</a>
 </div>
