--- a/templates/planner3.html
+++ b/templates/planner3.html
@@ -123,13 +123,13 @@
             const y = document.getElementById("secondcondition")
 
             if (x.checked || y.checked) {   //or
-                document.getElementById("onlyrow").innerHTML = ":/"
+                document.getElementById("onlyrow").innerHTML = "<img src=\"/static/assets/ethanimages/vomilton.png\" alt=\"Eh...\" style=\"width: 200px; height: 200px; object-fit: cover\" ></a>"
             }
             if (x.checked && y.checked) {   //and
-                document.getElementById("onlyrow").innerHTML = ":)"
+                document.getElementById("onlyrow").innerHTML = "<img src=\"/static/assets/ethanimages/ankles.png\" alt=\"Sheeeeeesh\" style=\"width: 200px; height: 200px; object-fit: cover\" ></a>"
             }
             if (!(x.checked || y.checked)) {    //nor
-                document.getElementById("onlyrow").innerHTML = ":("
+                document.getElementById("onlyrow").innerHTML = "<img src=\"/static/assets/ethanimages/anirudhsus.png\" alt=\"Sadge\" style=\"width: 200px; height: 200px; object-fit: cover\" ></a>"
 
             }
         }
