--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -42,6 +42,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="dropdown-item" href={{ url_for('joke') }}>Joke</a>
                     <a class="dropdown-item" href={{ url_for('jokes') }}>Jokes</a>
                     <a class="dropdown-item" href={{ url_for('covid19') }}>COVID 19</a>
+                    <a class="dropdown-item" href={{ url_for('weatherapi2') }}>Weather</a>
                 </div>
             </li>
         </ul>
