updated weather api

--- a/templates/weatherapi2.html
+++ b/templates/weatherapi2.html
@@ -34,11 +34,11 @@
     </tr>
     <tr>
         <td>Centro comercial Moctezuma</td>
-        <td>Francisco Chang</td>
+        <td>{{myweather['main']['Rain']}}</td>
     </tr>
     <tr>
-        <td>Ernst Handel</td>
-        <td>{{myweather['coord']['lon']}}</td>
+        <td>Feels Like</td>
+        <td>{{myweather['main']['feels_like']}}</td>
 
     </tr>
     <tr>
