--- a/templates/weatherapi2.html
+++ b/templates/weatherapi2.html
@@ -14,27 +14,34 @@
             padding: 8px;
         }
 
-        tr:nth-child(even) {
-            background-color: #dddddd;
+        html, body {
+            background-color: lightblue;
         }
+        th, td{
+            border: 5px solid black;
+            column-rule: 4px dotted rgb(79, 185, 227);
+
+        }
+
     </style>
 </head>
 <body>
 
-<h2>Weather in London!!</h2>
+<h2>What to wear.... here are the conditions in San Diego!!</h2>
 
 <table>
+
     <tr>
         <th>Conditions</th>
         <th>Values</th>
     </tr>
     <tr>
-        <td>Alfreds Futterkiste</td>
-        <td>Maria Anders</td>
+        <td>Wind</td>
+        <td>{{myweather['wind']['speed']}}</td>
     </tr>
     <tr>
-        <td>Centro comercial Moctezuma</td>
-        <td>{{myweather['main']['Rain']}}</td>
+        <td>Humidity</td>
+        <td>{{myweather['main']['humidity']}}</td>
     </tr>
     <tr>
         <td>Feels Like</td>
