finished background color function

--- a/templates/binarytoplanner.html
+++ b/templates/binarytoplanner.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 <style>
+    body {
+        background-color: lightcoral;
+    }
     input {font-size:12px; width:300px;}
+    output {font-size:12px; width:300px;}
 </style>
 <script>
     function convert() {
