added back button function for logic gates

--- a/templates/planner3.html
+++ b/templates/planner3.html
@@ -124,7 +124,7 @@
                 <input type="checkbox" name="B" class="checkbox" id="secondcondition" value="1">
             </td>
             <td> <input type="button" onclick="myFunction()" class="button" value="Done"></td>
-            <!-- <td><span id="onlyrow"></span> </td> idk what this is for so i commented it out -->
+             <td><span id="onlyrow"></span> </td>
         </tr>
     </table>
 <body>
