--- a/templates/planner3.html
+++ b/templates/planner3.html
@@ -54,7 +54,7 @@
     <p>This will be where we will build the month version - <b>a daily planner with alarms for tests, homework, etc.</b></p>
 
     <!-- button that leads to the repo, can style the button in css above -->
-    <a href="http://127.0.0.1:5000/" target="_blank" class="btn">Weekly Calendar</a>
+    <a href="http://127.0.0.1:5000/planner4" target="_blank" class="btn">Weekly Calendar</a>
 
     <table>
 
