updated spotify playlists and added toggle feature

--- a/templates/planner3.html
+++ b/templates/planner3.html
@@ -65,7 +65,7 @@
     // Clock refresh frequency
     setInterval(clock, 1000);
 </script>
-<div style="margin-left: 50px">
+<div style="margin-left: 50px; margin-right: 50px">
     <h1>PLANNER</h1>
     <p>This will be where we will build the month version - <b>a daily planner with alarms for tests, homework, etc.</b></p>
 
