--- a/templates/planner4.html
+++ b/templates/planner4.html
@@ -62,7 +62,7 @@
     <p>This is this projects WEEKLY schedule - <b>a daily planner structured on a weekly basis.</b></p>
 
     <!-- button that leads to the repo, can style the button in css above -->
-    <a href="http://127.0.0.1:5000/planner3/" target="_blank" class="btn">Monthly Schedule</a>
+    <a href="http://127.0.0.1:5000/planner3/" class="btn">Monthly Schedule</a>
 
     <table>
         <tr>    <!-- tr is the table row and center aligns them  -->
